// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default queue behavior 1`] = `
"{
  \\"resource\\": {
    \\"aws_sqs_queue\\": {
      \\"root_Queue_7193B145\\": {}
    }
  }
}"
`;

exports[`default queue behavior 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Queue": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "children": Object {
              "Default": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.sqsQueue.SqsQueue",
                  "version": "10.0.12",
                },
                "id": "Default",
                "path": "root/Queue/Default",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "hidden": false,
            },
            "id": "Queue",
            "path": "root/Queue",
          },
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "hidden": true,
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "aws": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-aws.provider.AwsProvider",
              "version": "10.0.12",
            },
            "id": "aws",
            "path": "root/aws",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.13.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.13.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.13.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`queue with a consumer function 1`] = `"new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/function.inflight.ts\\")).FunctionClient(process.env[\\"FUNCTION_NAME_68e3f3ae\\"])"`;

exports[`queue with a consumer function 2`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_QueueOnMessagec5395e41_IamRole_800EDB96\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_QueueOnMessagec5395e41_IamRolePolicy_2E9AE0BB\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"sqs:ReceiveMessage\\\\\\",\\\\\\"sqs:ChangeMessageVisibility\\\\\\",\\\\\\"sqs:GetQueueUrl\\\\\\",\\\\\\"sqs:DeleteMessage\\\\\\",\\\\\\"sqs:GetQueueAttributes\\\\\\"],\\\\\\"Resource\\\\\\":\\\\\\"\${aws_sqs_queue.root_Queue_7193B145.arn}\\\\\\",\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_QueueOnMessagec5395e41_IamRole_800EDB96.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_QueueOnMessagec5395e41_IamRolePolicyAttachment_90B64365\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_QueueOnMessagec5395e41_IamRole_800EDB96.name}\\"
      }
    },
    \\"aws_lambda_event_source_mapping\\": {
      \\"root_Queue_EventSourceMapping_A20C741D\\": {
        \\"batch_size\\": 1,
        \\"event_source_arn\\": \\"\${aws_sqs_queue.root_Queue_7193B145.arn}\\",
        \\"function_name\\": \\"\${aws_lambda_function.root_QueueOnMessagec5395e41_BFDF10CF.function_name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_QueueOnMessagec5395e41_BFDF10CF\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Queue-OnMessage-c5395e41\\"
          }
        },
        \\"function_name\\": \\"Queue-OnMessage-c5395e41\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_QueueOnMessagec5395e41_IamRole_800EDB96.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_QueueOnMessagec5395e41_Bucket_8FFFAA14.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_QueueOnMessagec5395e41_S3Object_9BE0A142.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_QueueOnMessagec5395e41_Bucket_8FFFAA14\\": {}
    },
    \\"aws_s3_object\\": {
      \\"root_QueueOnMessagec5395e41_S3Object_9BE0A142\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_QueueOnMessagec5395e41_Bucket_8FFFAA14.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    },
    \\"aws_sqs_queue\\": {
      \\"root_Queue_7193B145\\": {
        \\"visibility_timeout_seconds\\": 30
      }
    }
  }
}"
`;

exports[`queue with a consumer function 3`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Handler": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "inbound",
                  "implicit": false,
                  "relationship": "handle",
                  "resource": "root/Queue-OnMessage-c5395e41",
                },
              ],
              "wing:resource:stateful": false,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "hidden": false,
            },
            "id": "Handler",
            "path": "root/Handler",
          },
          "Queue": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "outbound",
                  "implicit": false,
                  "relationship": "on_message",
                  "resource": "root/Queue-OnMessage-c5395e41",
                },
              ],
              "wing:resource:stateful": true,
            },
            "children": Object {
              "Default": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.sqsQueue.SqsQueue",
                  "version": "10.0.12",
                },
                "id": "Default",
                "path": "root/Queue/Default",
              },
              "EventSourceMapping": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.lambdaEventSourceMapping.LambdaEventSourceMapping",
                  "version": "10.0.12",
                },
                "id": "EventSourceMapping",
                "path": "root/Queue/EventSourceMapping",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "hidden": false,
            },
            "id": "Queue",
            "path": "root/Queue",
          },
          "Queue-OnMessage-c5395e41": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "outbound",
                  "implicit": false,
                  "relationship": "handle",
                  "resource": "root/Handler",
                },
                Object {
                  "direction": "outbound",
                  "implicit": true,
                  "relationship": "print",
                  "resource": "root/WingLogger",
                },
                Object {
                  "direction": "inbound",
                  "implicit": false,
                  "relationship": "on_message",
                  "resource": "root/Queue",
                },
              ],
              "wing:resource:stateful": false,
            },
            "children": Object {
              "Asset": Object {
                "constructInfo": Object {
                  "fqn": "cdktf.TerraformAsset",
                  "version": "0.13.2",
                },
                "id": "Asset",
                "path": "root/Queue-OnMessage-c5395e41/Asset",
              },
              "Bucket": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                  "version": "10.0.12",
                },
                "id": "Bucket",
                "path": "root/Queue-OnMessage-c5395e41/Bucket",
              },
              "Default": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                  "version": "10.0.12",
                },
                "id": "Default",
                "path": "root/Queue-OnMessage-c5395e41/Default",
              },
              "IamRole": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                  "version": "10.0.12",
                },
                "id": "IamRole",
                "path": "root/Queue-OnMessage-c5395e41/IamRole",
              },
              "IamRolePolicy": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                  "version": "10.0.12",
                },
                "id": "IamRolePolicy",
                "path": "root/Queue-OnMessage-c5395e41/IamRolePolicy",
              },
              "IamRolePolicyAttachment": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                  "version": "10.0.12",
                },
                "id": "IamRolePolicyAttachment",
                "path": "root/Queue-OnMessage-c5395e41/IamRolePolicyAttachment",
              },
              "S3Object": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                  "version": "10.0.12",
                },
                "id": "S3Object",
                "path": "root/Queue-OnMessage-c5395e41/S3Object",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "hidden": false,
            },
            "id": "Queue-OnMessage-c5395e41",
            "path": "root/Queue-OnMessage-c5395e41",
          },
          "Queue-OnMessageHandler-c5395e41": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": false,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "hidden": false,
            },
            "id": "Queue-OnMessageHandler-c5395e41",
            "path": "root/Queue-OnMessageHandler-c5395e41",
          },
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "inbound",
                  "implicit": true,
                  "relationship": "print",
                  "resource": "root/Queue-OnMessage-c5395e41",
                },
              ],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "hidden": true,
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "aws": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-aws.provider.AwsProvider",
              "version": "10.0.12",
            },
            "id": "aws",
            "path": "root/aws",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.13.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.13.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.13.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`queue with custom timeout 1`] = `
"{
  \\"resource\\": {
    \\"aws_sqs_queue\\": {
      \\"root_Queue_7193B145\\": {
        \\"visibility_timeout_seconds\\": 30
      }
    }
  }
}"
`;

exports[`queue with custom timeout 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Queue": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "children": Object {
              "Default": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.sqsQueue.SqsQueue",
                  "version": "10.0.12",
                },
                "id": "Default",
                "path": "root/Queue/Default",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "hidden": false,
            },
            "id": "Queue",
            "path": "root/Queue",
          },
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "hidden": true,
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "aws": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-aws.provider.AwsProvider",
              "version": "10.0.12",
            },
            "id": "aws",
            "path": "root/aws",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.13.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.13.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.13.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
